[gd_scene load_steps=7 format=3 uid="uid://0sfufiylfjno"]

[ext_resource type="Script" uid="uid://cai4p3ampitru" path="res://menu_de_pausa.gd" id="1_m75na"]
[ext_resource type="Texture2D" uid="uid://bjyqv00bu3muo" path="res://Escenas/Menú de Créditos/Fondo.png" id="1_vf2k4"]
[ext_resource type="Texture2D" uid="uid://bb6gibb6a74cc" path="res://Escenas/Logo.png" id="2_m75na"]
[ext_resource type="Texture2D" uid="uid://btmxyn7n7nvob" path="res://Escenas/MenuPausa/REANUDAR.png" id="3_jbpyb"]
[ext_resource type="Texture2D" uid="uid://cvkn6rbdif0ox" path="res://Escenas/MenuPausa/TIENDA.png" id="4_66bev"]
[ext_resource type="Texture2D" uid="uid://8stav4gpi583" path="res://Escenas/MenuPausa/MENU PRINCIPAL (1).png" id="5_v33pw"]

[node name="Menu de pausa" type="CanvasLayer"]
process_mode = 3
visible = false
script = ExtResource("1_m75na")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_vf2k4")

[node name="MarginContainer" type="MarginContainer" parent="TextureRect"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 65
theme_override_constants/margin_top = 80
theme_override_constants/margin_bottom = -620

[node name="TextureRect" type="TextureRect" parent="TextureRect/MarginContainer"]
modulate = Color(0.4597081, 0.4597081, 0.4597081, 1)
layout_mode = 2
texture = ExtResource("2_m75na")

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -845.0
offset_top = -169.5
offset_bottom = 169.5
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/separation = 24

[node name="Reanudar" type="Button" parent="TextureRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
icon = ExtResource("3_jbpyb")
flat = true

[node name="Tienda" type="Button" parent="TextureRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
icon = ExtResource("4_66bev")
flat = true

[node name="Menu Principal" type="Button" parent="TextureRect/VBoxContainer"]
layout_mode = 2
icon = ExtResource("5_v33pw")
flat = true

[connection signal="pressed" from="TextureRect/VBoxContainer/Reanudar" to="." method="_on_reanudar_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/Tienda" to="." method="_on_tienda_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/Menu Principal" to="." method="_on_menu_principal_pressed"]
